Enforce strict stubs for mockito (#3070)